[gd_scene load_steps=19 format=2]

[ext_resource path="res://Entities/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art Assets/HOMEMADE ASSETS/greener_run2.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/HOMEMADE ASSETS/greener.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/HOMEMADE ASSETS/greener_run1.png" type="Texture" id=4]
[ext_resource path="res://Entities/Greener.gd" type="Script" id=5]
[ext_resource path="res://Entities/GreenerFSM.gd" type="Script" id=6]
[ext_resource path="res://Art Assets/HOMEMADE ASSETS/greener_attack.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 5.5 )

[sub_resource type="Animation" id=10]
resource_name = "Attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Barb/attackCollider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Barb/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 12, 8 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Run" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barb/attackCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Barb/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -7 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barb/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -1 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barb/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -1 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 3.5, 3.65625 )

[node name="Greener" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "Run"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 2.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." index="2"]
anims/Attack = SubResource( 10 )
"anims/Attack 2" = SubResource( 10 )
anims/RESET = SubResource( 7 )
anims/Run = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="FiniteStateMachine" parent="." index="3"]
script = ExtResource( 6 )

[node name="PathTimer" type="Timer" parent="." index="4"]
wait_time = 0.5
autostart = true

[node name="Barb" type="Area2D" parent="." index="5"]
position = Vector2( 0, -8 )

[node name="Sprite" type="Sprite" parent="Barb" index="0"]
position = Vector2( 0, -7 )
texture = ExtResource( 7 )

[node name="attackCollider" type="CollisionShape2D" parent="Barb" index="1"]
position = Vector2( 12, 8 )
shape = SubResource( 11 )
disabled = true

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="Barb" to="." method="_on_Barb_body_entered"]
